--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -2,13 +2,14 @@
     <head>
         <title>Voting App</title>
         <link  rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             VotingApp
           </a>
         </div>
