--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Voting App</title>
-        <link  rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
@@ -9,9 +9,10 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">
-            VotingApp
-          </a>
+          <a class="navbar-brand" href="/">VotingApp</a>
         </div>
+        <ul class="nav navbar-nav">
+          <li><a href="/polls/new">New Poll</a></li>
+        </ul>
       </div>
     </nav>
