--- a/app/views/show.ejs
+++ b/app/views/show.ejs
@@ -20,6 +20,8 @@
     <input type="text" placeholder="Vote Me!" name="content">
     <input type="submit" value="Add">
   </form>
+
+  <button id="delete" class="btn btn-danger">Delete Poll</button>
 </div>
 
 <% include ./partials/footer %>
