--- a/app/views/show.ejs
+++ b/app/views/show.ejs
@@ -15,13 +15,17 @@
     <% }) %>
   </ul>
 
-  <form action="/polls/<%= poll.id %>" method="post">
-    <label>New option</label>
-    <input type="text" placeholder="Vote Me!" name="content">
-    <input type="submit" value="Add">
-  </form>
+  <% if (currentUser) { %>
+    <form action="/polls/<%= poll.id %>" method="post">
+      <label>New option</label>
+      <input type="text" placeholder="Vote Me!" name="content">
+      <input type="submit" value="Add">
+    </form>
 
-  <button id="delete" class="btn btn-danger">Delete Poll</button>
+    <% if (poll.user === currentUser.username) { %>
+      <button id="delete" class="btn btn-danger">Delete Poll</button>
+    <% } %>
+  <% } %>
 </div>
 
 <% include ./partials/footer %>
