--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Voting App</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
